# project-tailwind

./: .gitattributes  .gitignore  API_README.md  API_README_COUNTS.md  API_README_FLOWS.md  API_README_SA.md  API_README_regen.md  TODO.md  clear_cache.py  extract_hotspots.py  flow_basket_features_explained.md  package-lock.json  pyproject.toml  requirements-agent.txt  requirements-api.txt  run_server.py  setup.py  spectral_group_debug.txt  tailwind.service  test_api.py  test_operators.py  visualize_hotspots_cartopy.py
.claude/: settings.local.json
docs/: flow_features_extractor.md  flows_metaopt_end_to_end.md  master.md  metaopt.md  metaopt_api.md  metaopt_examples.md  metaopt_overview.md  stateman.md
examples/: flow_extraction_configs.yaml  run_flow_cache_extraction.py  run_flow_cache_extraction_basic.notpy  run_flow_cache_extraction_basic_debug.notpy  run_flow_cache_extraction_basic_debug.py  run_flow_cache_extraction_basic_debugmp.py  run_flow_extraction.sh
notebooks/: interactive_flow_visualization.ipynb  interactive_flow_visualization_mainline.ipynb  interactive_sector_trajectory_visualization.ipynb  interactive_sector_trajectory_visualization_leaflet.ipynb  traffic_volume_only_viz.ipynb  trajectory_traffic_volume_visualization.ipynb  trajectory_traffic_volume_visualization_so6.ipynb  trajectory_visualization.ipynb  tvtw_trajectory_hotspot_visualization.ipynb  tvtw_trajectory_hotspot_visualization_hour.ipynb
prompts/: General Requirements for Operator Desi.md  datetime_rate_opt.md
tests/: ._retrieve_raw_tvtw_count.py  __init__.py  busiest_traffic_volume_hourly.py  retrieve_raw_tvtw_count.py  test_count_api_wrapper.py  test_delta_flight_list.py  test_fcfs.py  test_fcfs_flowful.py  test_flight_features.py  test_flight_query_nlp_endpoint.py  test_flow_extraction_pipeline.py  test_group_by_city_pairs.py  test_hotspot_flow_retrieval.py  test_main.py  test_nlp_query_parser.py  test_operators.py  test_plan_application.py  test_query_api_wrapper.py  test_regulation.py  test_regulation_and_network_plan_move.py  test_regulation_move_integration.notpy  test_regulation_move_integration.py  (+4 more)
(+332 files in other folders)
